--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,32 @@
-# Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+title: Bérénice Batut
+description: Website of Bérénice Batut
 
-# Build settings
-markdown: kramdown
+url: http://bebatut-research.github.io
+baseurl: ""
+paginate_path: "blog/page:num/"
+permalink: blog/:title/
+
+markdown: redcarpet
+highlighter: pygments
+paginate: 5
+
+navigation:
+ - title: Home
+   url: /index.html
+ - title: Research
+   url: /research
+ - title: Teaching
+   url: /teaching
+ - title: Publications
+   url: /publications
+ - title: Talks
+   url: /talks
+
+social:
+   github: bebatut
+   twitter: bebatut
+   email: berenice.batut@gmail.com
+   researchgate: Berenice_Batut
+   linkedin: berenicebatut
+
+google_analytics: 
