--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -2,49 +2,55 @@
     year: 2015-2016
     locations:
     -
+        at: "Galaxy workshop, Clermont-Ferrand, France"
+        lectures:
+        -
+            title: "Tool integration in Galaxy environment "
+            link: "http://bebatut-slides.github.io/galaxy_workshop_05_16/#/"
+    -
         at: "IUT (Bioinformatics), Aurillac, France"
         lectures:
         -
             title: "Initiation to metagenomic data processing"
             lecture_source: ""
             content:
-            - 
+            -
                 type: "Lectures"
                 link: "http://bebatut-edu.github.io/metagenomique_cm"
                 detailed_content:
-                - 
+                -
                     title: "Séquençage"
                     link: "http://bebatut-edu.github.io/metagenomique_cm/sequencage.html#/"
-                - 
+                -
                     title: "Métagénomique"
                     link: "http://bebatut-edu.github.io/metagenomique_cm/metagenomique.html#/"
-            - 
+            -
                 type: "Practical works"
                 detailed_content:
-                - 
+                -
                     title: "Traitement de données métagénomiques issus d'un échantillon d'intestin humain"
                     link: "https://github.com/bebatut-edu/metagenomique_tp/raw/master/protocol/sujet.pdf"
-        -   
+        -
             title: "Programming in BioPerl"
             lecture_source: ""
             content:
-            - 
+            -
                 type: "Lectures"
                 link: "http://bebatut-edu.github.io/bioperl-cm"
                 detailed_content:
-                - 
+                -
                     title: "Rappels de Perl"
                     link: "http://bebatut-edu.github.io/bioperl-cm/rappels.html#/"
-                - 
+                -
                     title: "Programmation orientée objet en Perl"
                     link: "http://bebatut-edu.github.io/bioperl-cm/poo.html#/"
-                - 
+                -
                     title: "BioPerl"
                     link: "http://bebatut-edu.github.io/bioperl-cm/bioperl.html#/"
-            - 
+            -
                 type: "Practical works"
                 detailed_content:
-                - 
+                -
                     title: "Traitement de données génomiques en Perl Orienté Objet et BioPerl"
                     link: "https://github.com/bebatut-edu/bioperl-tp/raw/master/protocol/sujet.pdf"
 -
@@ -57,45 +63,45 @@
             title: "Initiation to metagenomic data processing"
             lecture_source: ""
             content:
-            - 
+            -
                 type: "Lectures"
                 detailed_content:
-                - 
+                -
                     title: "Séquençage"
                     link: "assets/files/teaching/2014_2015/Sequencage.pdf"
-                - 
+                -
                     title: "Métagénomique"
                     link: "assets/files/teaching/2014_2015/Metagenomique.pdf"
-            - 
+            -
                 type: "Practical works"
                 detailed_content:
-                - 
+                -
                     title: "Comparaison des métagénomes intestinaux de patients en rémission d'infection chroniques de l'intestin et d'individus sains"
                     link: "assets/files/teaching/2014_2015/Metagenomique_TP.pdf"
-        -   
+        -
             title: "Programming in BioPerl"
             lecture_source: ""
             content:
-            - 
+            -
                 type: "Lectures"
                 detailed_content:
-                - 
+                -
                     title: "Perl Orienté Objet et BioPerl"
                     link: "assets/files/teaching/2014_2015/BioPerl.pdf"
-            - 
+            -
                 type: "Practical works"
                 detailed_content:
-                - 
+                -
                     title: "Références et classes"
                     link: "assets/files/teaching/2014_2015/BioPerl_TP1.pdf"
-                - 
+                -
                     title: "BioPerl"
                     link: "assets/files/teaching/2014_2015/BioPerl_TP2.pdf"
                     data_link: "assets/files/teaching/2014_2015/BioPerl_TP2_donnees.zip"
             -
                 type: "Evaluation"
                 detailed_content:
-                - 
+                -
                     title: "TP noté"
                     link: "assets/files/teaching/2014_2015/BioPerl_TP_note.pdf"
                     data_link: "assets/files/teaching/2014_2015/BioPerl_TP_note_donnees.zip"
